tests/cases/compiler-development/artifact/errors/diagnostic-match-nonexhaustive.diagnostic
diagnostic error code=ari/compiler family=general message="match must cover all cases of enum 'OptionI32'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/match-nonexhaustive.ari" display="tests/cases/match/errors/match-nonexhaustive.ari" bytes=156
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-nonexhaustive.ari" line=8 column=3 end_line=8 end_column=8 byte_start=85 byte_end=90 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-nonexhaustive.ari:8:3\n   |\n 8 |   match value {\n   |   ^^^^^"
